made it load better on mobile and it is boring colors now :(

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 
 body {
+    background-color: oklch(13% 0.028 261.692);
     color: white;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     /* Default size for desktop/large screens */
